<resources>
    <string name="app_name">Carebase</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>

    <!--login/signup screen start-->
    <string name="login_label">Login</string>
    <string name="email_lbl">Email</string>
    <string name="password_lbl">Password</string>
    <string name="error_invalid_email_format">Invalid email format</string>
    <string name="error_invalid_email_or_password">Invalid email or password</string>
    <string name="register_label">Register here</string>
    <string name="forgot_your_password_label">Forgot password</string>
    <string name="forgot_password_email_sent">If there is an account with that email, a password reset email has been sent</string>
    <string name="error_invalid_invitation">Invalid invitation code</string>
    <string name="account_created">Account created. Welcome!</string>
    <string name="user_not_signed_in">User not signed in</string>
    <!--login/signup screen end-->

    <!--common errors start-->
    <string name="error_too_many_attempts">Too many attempts. Retry in 1 minute.</string>
    <string name="error_something_wrong">Something went wrong, please contact support</string>
    <string name="error_device_lookup">Could not find device information</string>
    <string name="error_partial_data_in_database">Only device model information is found for this device</string>
    <string name="error_missing_required_fields">Please enter all required fields</string>
    <string name="error_must_be_greater_than_zero">Quantity must be greater than zero</string>
    <!--common errors end-->

    <!--adding a device start-->
    <string name="new_device_type_saved">New device type successfully saved</string>
    <string name="new_physical_location_saved">New physical location successfully saved</string>
    <string name="device_type_not_found">Device type not found</string>
    <!--adding a device end-->

    <!--procedures start-->
    <string name="procedures_list_end">Reached end of procedures</string>
    <string name="error_device_already_entered">The device has already been recorded</string>
    <string name="error_procedure_no_devices">Please scan the devices used in the procedure</string>
    <string name="procedure_date_label">Procedure Date</string>
    <string name="accession_number_label">Accession Number</string>
    <string name="procedure_name_label">Procedure Name</string>
    <string name="amount_used_label">Amount Used</string>
    <string name="room_time_out_label">Room Time Out</string>
    <string name="room_time_in_label">Room Time In</string>
    <string name="room_time_label">Room Time</string>
    <string name="fluoro_time_label">Fluoro Time</string>
    <!--procedures end-->

    <!--shipments start-->
    <string name="new_shipment_devices_saved">Devices added to inventory</string>
    <string name="shipment_not_found">No shipment with the given id can be found</string>
    <!--shipments end-->

    <!--template values start-->
    <!--Depreciated-->
    <string name="unit_quantity_value">%1$d Units</string>
    <plurals name="number_of_units">
        <item quantity="one">%d unit</item>
        <item quantity="other">%d units</item>
    </plurals>
    <!--template values end-->

    <string name="notes_lbl">Notes</string>
    <string name="save_lbl">Save</string>
    <string name="type_lbl">Type</string>
    <string name="tags_lbl">Tags</string>
    <string name="company_lbl">Company</string>
    <string name="quantity_lbl">Quantity</string>
    <string name="save_changes_lbl">Save changes</string>
    <string name="rescan_items_lbl">Rescan items</string>
    <string name="SingleUse_lbl">Single Use</string>
    <string name="reusable_lbl">Reusable</string>
    <string name="topView_label">Select the sites you want to view inventory for:</string>
    <string name="search_label">Search</string>
    <string name="sort_label">Sort by</string>
    <string name="sort_by_label">Sort by</string>
    <string name="all_sites_label">All sites</string>
    <string name="option_a_label">Option a</string>
    <string name="option_b_label">Option b</string>
    <string name="exit_lbl">Exit to Inventory View</string>
    <string name="otherType_lbl">Enter equipment type</string>
    <string name="number_added_label">Number Added</string>
    <string name="device_identifier_lbl">Device Identifier</string>
    <string name="lot_number_label">Lot Number</string>
    <string name="submitLocation_lbl">Submit physical location</string>
    <string name="submitSite_lbl">Submit site</string>
    <string name="specifications_label">Specifications</string>
    <string name="time_in_lbl">Time In</string>
    <string name="date_in_lbl">Date In</string>
    <string name="autopopulate_lbl">Autopopulate</string>
    <string name="physical_location_lbl">Physical Location</string>
    <string name="add_size_field_lbl">Add Size Field</string>
    <string name="site_location_label">Site Location</string>
    <string name="reference_number_lbl">Reference Number</string>
    <string name="medical_speciality_lbl">Medical Speciality</string>
    <string name="device_description_lbl">Device Description</string>
    <string name="removeSize_label">Remove size field</string>
    <string name="setButton_label">Set</string>
    <string name="cancelButton_label">Cancel</string>
    <string name="usage_label">Usage</string>
    <string name="name_label">Name</string>
    <string name="itemsUsed_lbl">Number of Items Used</string>
    <string name="barcode_udi_label">Barcode | UDI</string>
    <string name="device_identifier_label">Device Identifier</string>
    <string name="quantity_label">Quantity</string>
    <string name="expiration_label">Expiration</string>
    <string name="hospital_name_label">Hospital Name</string>
    <string name="physical_location_label">Physical Location</string>
    <string name="type_label">Type</string>
    <string name="medical_specialty_label">Medical Specialty</string>
    <string name="device_description_label">Device Description</string>
    <string name="reference_number_label">Reference Number</string>
    <string name="manufacturer_company_label">Manufacturer Company</string>
    <string name="last_update_label">Last Update</string>
    <string name="notes_label">Notes</string>
    <string name="specification_label">Specifications</string>
    <string name="procedureTimeIn_label">Procedure time in</string>
    <string name="procedureTimeOut_label">Procedure time out</string>
    <string name="offlineHeader_string">Currently your device is offline and you have limited capabilities.\nPlease fill out given fields to save equipment information.\nOnce you are online, please, verify and save it</string>
    <string name="default_notification_channel_id">levigo</string>
    <string name="channel_name">levigo</string>
    <string name="channel_description">levigo</string>
    <string name="msg_token_fmt">\"%s\"</string>
    <string name="increment_button_description">increment button</string>
    <string name="tap_to_generate_a_new_accession_number_label">Tap to generate a new accession number</string>
    <string name="purchaseDate_lbl">Purchase date</string>
    <string name="packageCost_lbl">Package cost</string>
    <string name="units_lbl">Number of units</string>
    <string name="costUnit_lbl">Cost per unit</string>
    <string name="cost_lbl">Cost</string>
    <string name="title_lbl">title</string>
    <string name="carebase_lbl">Carebase</string>
    <string name="send_reset_link_lbl">Send Reset Link</string>
    <string name="invitationcode_lbl">InvitationCode</string>
    <string name="submit_lbl">Submit</string>
    <string name="your_network_lbl">Your Network:</string>
    <string name="your_hospital_lbl">Your Hospital:</string>
    <string name="confirm_password_lbl">Confirm Password</string>
    <string name="create_account_lbl">Create Account</string>
    <string name="are_you_a_hospital_administrator_lbl">Are you a hospital administrator?</string>
    <string name="want_to_try_it_out_first_lbl">Want to try it out first?</string>
    <string name="email_us_to_create_an_admin_account_lbl">Email us to create an admin account</string>
    <string name="live_demo_with_a_sample_database_lbl">Live demo with a sample database</string>
    <string name="inventory_lbl">Inventory</string>
    <string name="tnumber_of_equipment_used_t_lbl">\tNumber of equipment used\t</string>
    <string name="filter_by_lbl">Filter By</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="equipment_cost_lbl">Equipment Cost</string>
    <string name="pending_equipment_lbl">Pending equipment</string>
    <string name="add_a_procedure_lbl">Add a procedure</string>
    <string name="name_of_equipment_lbl">Name of Equipment</string>
    <string name="udi_lbl">UDI</string>
    <string name="new_procedure_lbl">New procedure</string>
    <string name="room_time_lbl">Room time</string>
    <string name="fluoro_time_lbl">Fluoro time</string>
    <string name="expiration_date_lbl">Expiration Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ship">Ship</string>

</resources>
